[package]
name = "bliss-analyser"
version = "0.3.0"
authors = ["Craig Drummond <craig.p.drummond@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
description = "Analyse audio files with bliss-rs"
repository = "https://github.com/CDrummond/bliss-analyser"
keywords = ["audio", "song", "similarity"]
readme = "README.md"

[dependencies]
argparse = "0.2.2"
anyhow = "1.0.40"
rusqlite = { version = "0.28.0", features = ["bundled"] }
log = "0.4.14"
env_logger = "0.8.4"
indicatif = "0.16.2"
lofty = "0.16.1"
dirs = "1"
chrono = "0.4.19"
regex = "1"
substring = "1.4.5"
ureq = "2.4.0"
configparser = "3.0.0"
if_chain = "1.0.2"
num_cpus = "1.13.0"
which = "7.0.2"
rcue = "0.1.3"
hhmmss = "0.1.0"

[features]
libav = ["bliss-audio/ffmpeg"]
update-aubio-bindings = ["bliss-audio/update-aubio-bindings"]
staticlibav = ["bliss-audio/ffmpeg","bliss-audio/build-ffmpeg,bliss-audio/ffmpeg-static"]

[dependencies.bliss-audio]
default-features = false
features = ["aubio-static"]
version = "0.9.4"
