[package]
name = "bliss-analyser"
version = "0.5.0"
authors = ["Craig Drummond <craig.p.drummond@gmail.com>"]
edition = "2021"
license = "GPL-3.0-only"
description = "Analyse audio files with bliss-rs"
repository = "https://github.com/CDrummond/bliss-analyser"
keywords = ["audio", "song", "similarity"]
readme = "README.md"

[profile.release]
strip=true

[dependencies]
argparse = "0.2.2"
anyhow = "1.0.40"
rusqlite = { version = "0.34.0", features = ["bundled"] }
log = "0.4.14"
env_logger = "0.11.7"
indicatif = "0.16.2"
lofty = "0.22.2"
filetime = "0.2"
dirs = "1"
chrono = "0.4.40"
regex = "1"
substring = "1.4.5"
ureq = "2.4.0"
configparser = "3.0.0"
if_chain = "1.0.2"
num_cpus = "1.13.0"
which = { version = "7.0.2", optional = true }
rcue = { version = "0.1.3", optional = true }
hhmmss = { version = "0.1.0", optional = true }
ctrlc = "3.4"

[features]
libav = ["bliss-audio/ffmpeg"]
update-aubio-bindings = ["bliss-audio/update-aubio-bindings"]
staticlibav = ["bliss-audio/build-ffmpeg", "bliss-audio/ffmpeg-static"]
ffmpeg = ["dep:which", "dep:rcue", "dep:hhmmss"]
symphonia = ["bliss-audio/symphonia-all", "bliss-audio/symphonia-aiff", "bliss-audio/symphonia-alac"]
rpi = ["bliss-audio/rpi"]

[dependencies.bliss-audio]
default-features = false
features = ["aubio-static"]
version = "0.11.1"
#git = "https://github.com/Polochon-street/bliss-rs.git"
#rev = "006927ac16752ff2e00bfe0d6b7756f67fa822c0"
